<resources>
    <string name="app_name">Firstugi</string>
    <string name="menu_home">Home</string>
    <string name="menu_bus">Bus</string>
    <string name="menu_student">Student</string>
    <string name="menu_erp">ERP</string>
    <string name="menu_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_study">Study</string>
</resources>
