<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_home"
        android:title="@string/menu_home"
        android:icon="@drawable/ic_home_black_24dp"/>
    <item
        android:id="@+id/action_erp"
        android:title="@string/menu_erp"
        android:icon="@drawable/ic_receipt_black_24dp"/>
    <item
        android:id="@+id/action_bus"
        android:title="@string/menu_bus"
        android:icon="@drawable/ic_directions_bus_black_24dp"/>
    <item
        android:id="@+id/action_student"
        android:title="@string/menu_student"
        android:icon="@drawable/ic_people_black_24dp"/>
    <item
        android:id="@+id/action_profile"
        android:title="@string/menu_study"
        android:icon="@drawable/ic_description_black_24dp"/>


</menu>